# leopart

./: .gitignore  .readthedocs.yml  README.md  bitbucket-pipelines.yml  bitbucket-pipelines.yml.old  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
envs/: environment.yml
meshes/: circle_0.xml  generate_circle_mesh.py  submerged_bar.xml
source/: FormsDiffusion.py  FormsPDEMap.py  FormsStokes.py  InitialConditions.py  InitialConditions.py~  MeshVelocity.py  ParticleFun.py  ParticleFun.py~  ParticleGenerator.py  __init__.py  __init__.py~  utils.py
source/cpp/: CMakeLists.txt  QuadProg++.cc  QuadProg++.hh  adddelete.cpp  adddelete.h  advect_particles.cpp  advect_particles.cpp.old  advect_particles.h  eigquadprog.h  formutils.cpp  formutils.h  l2projection.cpp  l2projection.h  particle.h  particle_wrapper.cpp  particles.cpp  particles.h  pdestaticcondensation.cpp  pdestaticcondensation.h  stokesstaticcondensation.cpp  stokesstaticcondensation.h  utils.h
tests/: GaussianPulse_rotation.py  GaussianPulse_rotation_adddelete.py  GaussianPulse_rotation_adddeleteparticles.py  SineHump_translation.py  SineHump_translation_adddelete.py  SlottedDisk_rotation.py  SlottedDisk_rotation_adddelete.py  SteadyStokes_test.py  TaylorGreen_2D.py  TaylorGreen_3D.py  TaylorGreen_3D_l2.py  TaylorGreen_3D_np.py  generate_circle_mesh.py
unit_tests/: import_test.py  test_2d_advect.py  test_2d_project.py  test_3d_advect.py  test_3d_project.py  test_adddelete.py  test_advect_particles.py  test_mesh_generator.py  test_moving_mesh.py  test_periodic_boundary.py  test_project2.py  (+3 more)
(+37 files in other folders)
